--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://565ae748-01b3-4a4d-b508-e5f60e2f1fd0.preview.emergentagent.com
 WDS_SOCKET_PORT=443
